--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,5 +25,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'org.ftclib.ftclib:core:2.0.1'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
