--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,5 +26,7 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     implementation 'org.ftclib.ftclib:core:2.0.1'
+    implementation 'org.openftc:apriltag:1.1.1'
+    implementation 'org.openftc:easyopencv:1.5.3'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
