--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.0.1'
     implementation 'org.openftc:apriltag:1.1.1'
     implementation 'org.openftc:easyopencv:1.5.3'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
